[project]
name = "pyelephant"
version = "0.0.1"
authors = [
  { name="Floris Mooij", email="florismooij2014@gmail.com" },
]
description = "My personal python package."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/codingelephants-gpt/pyElephant"
Issues = "https://github.com/codingelephants-gpt/pyElephant/issues"
